test/ok/0013_dependentAdt.neon
data Sigma (A: Type) (P: (A -> Type)) =
| Pair (x: A) (y: P(x))