test/error/006_nonStrictlyPossitivelyRecurssiveAdt.neon
data Bad (A : Type) = 
| MkBad (x : Bad(A) -> A)